	- fix: rpmdb iterator memory leak in python bindings.
	- fix: include <sys/time.h> for 6.2 python modules.
	- remove vestiges of mipseb arch (#62408).
	- make peace with automake-1.6.1 et al.
	- backport all beecrypt/rpmio bits from 4.1 that don't break the API.
	- use /etc/rpm/platform (if it exists), rather than uname(2), for arch.
	- add /usr/lib/rpm/redhat/* per-vendor configuration.

4.0.2 -> 4.0.3:
	- update per-interpreter dependency scripts, add sql/tcl (#20295).
	- fix: rpmvercmp("1.a", "1.") returned -1, not +1 (#21392).
	- add cpuid asm voodoo to detect athlon processors.
	- add %exclude support (i.e. "everything but") to %files.
	  (Michael (Micksa) Slade" <micksa@knobbits.org>)
	- add --with/--without popt glue for conditional builds(Tomasz Kloczko).
	- python: strip header regions during unload.
	- add -g to optflags in per-platform config.
	- permit confgure/compile with db3-3.2.9.
	- permit manifest files as args to query/verify/install modes.
	- fix: parameterized macro segfault (Jakub Bogusz <qboosh@pld.org.pl>)
	- fix: i18n tags in rpm-2.5.x had wrong offset/length (#33478).
	- fix: AIX has sizeof(uint_16) != sizeof(mode_t) verify cast needed.
	- fix: zero length hard links unpacked incorrectly (#34211).
	- fix: --relocate missing trailing slash (#28874,#25876).
	- fix: --excludedoc shouldn't create empty doc dir (#14531).
	- fix: %_netsharedpath needs to look at basenames (#26561).
	- fix: --excludepath was broken (#24434).
	- fix: s390 (and ppc?) could return CPIOERR_BAD_HEADER (#28645).
	- fix: Fwrite's are optimized out by aggressive compiler(irix) (#34711).
	- portability: vsnprintf/snprintf wrappers for those without (#34657).
	- more info provided by rpmdepOrder() debugging messages.
	- merge (compatible) changes from top-of-stack into rpmlib.h.
	- cpio mappings carry dirname/basename, not absolute path.
	- fix: check waitpid return code.
	- remove support for v1 src rpm's.
	- re-position callbacks with ts/fi in cpio payload layer.