@@ -20,7 +20,7 @@ Name: rpm
 %define version 4.0.4
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 7x.23
+Release: 7x.24
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -522,6 +522,9 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Sat Jun 15 2002 Jeff Johnson <jbj@redhat.com> 4.0.4-7x.24
+- beecrypt: revert cpu/arch compile option mixup (#66752).
+
 * Sun Jun  9 2002 Jeff Johnson <jbj@redhat.com> 4.0.4-7x.23
 - make peace with automake-1.6.1 et al.
 - backport all beecrypt/rpmio bits from 4.1 that don't break the API.
