@@ -84,6 +84,7 @@
 	- backport all beecrypt/rpmio bits from 4.1 that don't break the API.
 	- use /etc/rpm/platform (if it exists), rather than uname(2), for arch.
 	- add /usr/lib/rpm/redhat/* per-vendor configuration.
+	- beecrypt: revert cpu/arch compile option mixup (#66752).
 
 4.0.2 -> 4.0.3:
 	- update per-interpreter dependency scripts, add sql/tcl (#20295).
